--- a/ProjectGenius-Frontend/public/css/teacher.css
+++ b/ProjectGenius-Frontend/public/css/teacher.css
@@ -435,3 +435,25 @@ ul {
     align-items: center;
     margin: 16px 0;
 }
+
+.multi-select-dropdown {
+    display: flex;
+    align-items: center;
+    background-color: #ffffffe0;
+    padding: 4px 6px;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.multi-select-dropdown input {
+    height: 30px;
+    width: 16px;
+}
+
+.multi-select-dropdown select {
+    height: 33px;
+    width: 20px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
