--- a/ProjectGenius-Frontend/public/css/attendance-mark.css
+++ b/ProjectGenius-Frontend/public/css/attendance-mark.css
@@ -277,8 +277,12 @@
     font-size: 14px;
     padding: 8px 6px;
 }
-.eye i {
+.mark-edit-btn {
     color:#4f4e69;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
     cursor: pointer;
 }
 .present {
@@ -579,3 +583,96 @@
     width: 60px;
     text-align: center;
 }
+
+/* Edit Mark PopUp Style */
+.edit-mark-body {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #5e6e8d29;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.edit-mark-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    width: 90%;
+    max-width: 400px;
+    padding: 1.5rem;
+    background-color: #fcfad3;
+    border-radius: 20px;
+    box-shadow: 1px 10px 10px 1px #00000050;
+}
+.edit-mark-container button {
+    color: rgb(229, 49, 49);
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    align-self: flex-end;
+}
+.edit-mark-container p {
+    color: #012970;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 35px;
+}
+.edit-mark-container p span {
+    color: #000000;
+}
+.edit-mark-container form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0;
+}
+.edit-mark-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    margin: 12px 0;
+}
+.edit-mark-input label {
+    color: #858585;
+    font-size: 14px;
+    white-space: nowrap;
+}
+.edit-mark-input input{
+    border: none;
+    padding: 8px 0px;
+    box-shadow: 1px 1px 10px #e9c7c3;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
+    height: 36px;
+    width: 100%;
+    text-indent: 10px;
+}
+.edit-mark-container form button {
+    padding: 7px 12px;
+    border-radius: 4px;
+    color: white;
+    background: #ff3672;
+    border: none;
+    height: 33px;
+    font-size: 12px;
+    margin: 12px 0; 
+    white-space: nowrap;
+    cursor: pointer;
+    align-self: center;
+}
+.edit-mark-container form p {
+    font-size: 12px;
+    color: #e4343d;
+    text-align: center;
+    font-weight: 400;
+}
+/* Edit Mark PopUp Style */
